# template_python

./: .env  .gitignore  README.md  compose.yml  makefile  pyproject.toml
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
.devcontainer/scripts/: post_start.sh
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: auto_assign.yml  cross_platform_test.yml  pr_test.yml
src/: main.py
