[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "pytest==8.3.5",
  "pytest-cov==6.1.1",
  "pytest-xdist==3.6.1",
  "fastapi==0.115.12",
  "uvicorn['standard']==0.34.2",
]

[dependency-groups]
dev = ["ruff>=0.11.8"]

[tool.ruff]
exclude = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".vscode",
  "__init__.py",
]
line-length = 120
indent-width = 4

[tool.ruff.lint]
ignore = ["A003", "D415", "E203", "S101", "D100", "D101", "D103", "S104"]
select = ["A", "N", "E", "D", "W", "F", "I", "C90", "S"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
